# project-k5

./: README.md  manage.py  package.json  requirements.txt
.github/ISSUE_TEMPLATE/: feature.md
api/: urls.py  views.py
backend/: _TREE-Output.txt  db.sqlite3  pyproject.toml  requirements.txt
backend/api/: request_owid_co2.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/project_k5/: settings.py  urls.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.js  App.jsx  App.tsx  index.css
frontend/src/components/: EndpointList.tsx  LineChart.tsx  linechart.js
frontend/src/header/: NavigationBar.jsx
frontend/src/main/home/: Home.1.jsx  Home.2.jsx  Home.3.jsx  Home.4.jsx  Home.5.jsx  Home.6.jsx  Home.Quote.jsx  Home.css  Home.jsx
frontend/src/main/involved/: Involved.jsx  InvolvedOrganizations.jsx  InvolvedPage.jsx  query_organizations.js
frontend/src/main/progress/: Progress.1.jsx  Progress.jsx
frontend/src/pages/: Home.tsx
frontend/src/utils/: Endpoints.tsx
project_k5/: asgi.py  settings.py  wsgi.py
