[tool.poetry]
name = "project-k5"
version = "0.1.0"
description = ""
authors = ["Svene <aidrecabrera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
